--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,7 +1,7 @@
 // $%^L
 
 // window
-$window-color: rgb(66, 56, 155);
+$window-color: rgb(94, 198, 197);
 
 $window-shadow: darken($window-color, 15%);
 $window-title: lighten($window-color, 60%);
@@ -20,6 +20,8 @@ $terminal-background-color: #000;
 
 
 // // background
+
+// $window-color: rgb(66, 56, 155);
 // $background-color: rgba(22, 13, 18, 1);
 
 // // window
