--- a/css/style.scss
+++ b/css/style.scss
@@ -22,12 +22,23 @@ html, body{
 }
 // minimize/maximize window
 .extend{
-  width: 90vw !important;
+  width: 95vw !important;
   height: 90vh !important;
+}
+.center{
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%,-50%) !important;
+}
+
+.window{
+  width: 100vw !important;
+  height: 100vh !important;
 }
 
 .background{
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
