--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ html, body {
   color: white;
   position: relative;
   height: 30px;
-  cursor: pointer;
+  cursor: grabbing;
 }
 .background .terminal-body .title:hover .controls a {
   opacity: 1;
